welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:20: error: not found: value estfaceMur
  } while (!estfaceMur)
            ^Array2:41: error: type mismatch;
 found   : Int
 required: java.awt.Color
      setCouleurBrosse((i+decalage)%getMondeHauteur())
                                   ^Array2:46: error: not found: value isFaceMur
  } while (!isFaceMur)
            ^